# try-shiny

./: .pdm-python  import-helpers-quarto.ipynb  justfile  pyproject.toml  requirements.txt
apps/examples/0.0-penguins/: app.py
exercises/: 5-reactive-effect.ipynb
