[project]
name = "try-shiny"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "shiny",
    "shinylive",
    "pandas",
    "plotnine",
    "seaborn",
    "jupyter",
    "faicons>=0.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.2",
]
